# Scimon

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml
basic-usage/: index.html
configs/env-file/: index.html
configs/scimon.yml-file/: index.html
docs/: basic-usage.md  build.md  index.md  providers.md  scrape.md
docs/configs/: env-file.md  scimon.yml-file.md
docs/monset/: markdown-render.md
env-file/: index.html
external-resources/: index.html
monset/commands-block/: index.html
monset/compress/: index.html
monset/covers/: index.html
monset/download-block/: index.html
monset/markdown-render/: index.html
monset/math/: index.html
monset/open-links/: index.html
monset/prints/: index.html
monset/qrcode/: index.html
monset/readme-block/: index.html
monset/style/: index.html
monset/what-is/: index.html
providers/: index.html
scrape/: index.html
src/: args_cli.rs  main.rs  scimon.rs
src/addons/: chatgpt.rs  mod.rs  monlib.rs  scihub.rs  scrape.rs  wikipedia.rs
src/cmd/: compress.rs  mod.rs  monset.rs  tasks.rs  tasks_raw.rs
src/configs/: configs_files.rs  env.rs  mod.rs  settings.rs  view_env.rs  write_env.rs
src/consts/: addons.rs  uris.rs
src/generator/: checksum.rs  covers.rs  math.rs  mod.rs  qr_code.rs  templates.rs
src/handlers/: mod.rs  monlib_errors.rs  monlib_handlers.rs
src/monlib/: logout.rs  mod.rs  pull.rs  push.rs  request.rs
src/regexp/: regex_blocks.rs
src/render/: mod.rs  render.rs  render_images.rs  render_inject.rs  render_io.rs
src/syntax/: macro_handler.rs  mod.rs  vars.rs
src/system/: doi.rs  download.rs  general.rs  markdown.rs  mod.rs  (+4 more)
(+16 files in other folders)
