[package]
name = "Scimon"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = [ "kremilly" ]
categories = ["command-line-utilities"]
keywords = ["pdf batch", "batch downloads", "markdown to pdf", "pdf downloader", "markdown converter"]
description = "Scimon is a tool designed for batch downloading PDF files using its own dedicated language, Monset (.mon). Monset features a very simple and quick-to-write syntax, making it easy to use."
repository = "https://github.com/Kremilly/Scimon"
documentation = "https://scimon.kremilly.com"
homepage = "https://scimon.kremilly.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["multipart", "json", "blocking"] }
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"
url = "2.5.4"
is-url = "1.0.4"
mime = "0.3.13"
dotenvy = "0.15.7"
figlet-rs = "0.1.3"
colored = "3.0.0"
dirs-next = "2.0"
clap = { version = "4.5.25", features = ["cargo", "derive"] }
indicatif = "0.17.9"
regex = "1.11.1"
once_cell = "1.20.2"
chrono = "0.4.39"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
webbrowser = "1.0.3"
pulldown-cmark = "0.12.1"
qrcode = "0.14.0"
base64 = "0.22.1"
serde_yaml = "0.9"
minify = "1.3.0"
image = "0.25.5"
select = "0.6.0"
headless_chrome = "1.0.15"
rand = "0.8.5"
open = "5.3.2"
lopdf = "0.34.0"
sha2 = "0.10.8"
zip = "2.2.2"
walkdir = "2.5.0"
scraper = "0.22.0"
pdfium-render = "0.8.27"
rpassword = "7.3.1"
mathjax = "0.1.1"
